arch/onprem-vpc.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: This template provision a VPC that emulates the On-premise environment.
Parameters:
  BusinessUnit:
    Description: Defines the Business Unit that uses thes resources
    Default: OnPremise
    Type: String
  Environment:
    Description: Choose an environment where you want to create this stack
    Type: String
    Default: dev
    AllowedValues:
      - dev
      - SIT
      - UAT
      - prod
  AvailabilityZone1:
      Description: Availability zone for the File gateway server
      Type: AWS::EC2::AvailabilityZone::Name
      Default: us-east-1a
Resources:
  # Network
  #-------------------------------------------------
  OnPremVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: businessUnit
          Value: !Ref BusinessUnit
        - Key: environment
          Value: !Ref Environment
  OnPremPrivateSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref OnPremVPC
      AvailabilityZone: !Ref AvailabilityZone1
      CidrBlock: 10.0.1.0/16
      MapPublicIpOnLaunch: false
  OnPremPublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref OnPremVPC
      AvailabilityZone: !Ref AvailabilityZone1
      CidrBlock: 10.0.2.0/16
      MapPublicIpOnLaunch: true

  # Route and NACL
  #-------------------------------------------------
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref OnPremVPC
  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: NatGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref NatGateway
  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref OnPremPublicSubnet
      RouteTableId: !Ref PublicRouteTable
  PrivateRoute:
      Type: AWS::EC2::Route
      Properties:
        NatGatewayId: !Ref NatGateway
        RouteTableId: !Ref PrivateRouteTable
        DestinationCidrBlock: 0.0.0.0/0    
  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref OnPremPrivateSubnet
      RouteTableId: !Ref PrivateRouteTable 

  # Internet connectivity
  #-------------------------------------------------

  ## NAT GATEWAY
  NatGateway:
    Type: AWS::EC2::NatGateway
    DependsOn: NatPublicIP
    Properties:
      SubnetId: !Ref OnPremPublicSubnet
      AllocationId: !GetAtt NatPublicIP.AllocationId

  ## ELASTIC IP
  NatPublicIP:
    Type: AWS::EC2::EIP
    DependsOn: OnPremVPC
    Properties:
      Domain: vpc
